[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder   = "1.4.3"
clap        = "4.2.7"
log         = "0.4.17"
napi        = "2"
napi-derive = "2"
nix         = "0.26.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
