[package]
edition = "2021"
name    = "node-vsock"
version = "0.0.5"

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder   = "1.4.3"
clap        = "4.2.7"
log         = "0.4.17"
napi        = { version = "2", features = ["napi4"] }
napi-derive = "2"
nix         = "0.26.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
